2006-08-13  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: handle cctools more gracefully

2006-08-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm: rewrite 64bit-cpu to work with both ppc and intel

2006-08-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Services.pm: prepare for the future

2006-08-09  Daniel Macks  <dmacks@netspace.org>

	* Scanpackages.pm: Safer assurance of getting perl's core DB_File
	module.

2206-08-08  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Services.pm: allow more complex version strings for darwin, and
	prepare for the future.
	* Bootstrap.pm: allow perl 5.8.8

2006-08-07  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Also allow %n-%v.info as .info filename.

2006-08-03  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: When validating the contents of a file in a .deb,
	only do so if it's a real file (symlinks might be absolute or to
	files in a different .deb)

2006-07-26  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Fix execute() to resurrect the whole env even if
	sudo alters it.

2006-07-26  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Fix execute() to pass PERL5LIB even when sudo
	blanks that variable.

2006-07-25  Daniel Macks  <dmacks@netspace.org>

	* Finally/Buildlock.pm: new location for wiki

2006-07-24  Daniel Macks  <dmacks@netspace.org>

	* Status.pm: New disable_reload and is_reload_disabled class
	methods allow temporarily inhibiting check for changes to on-disk
	dpkg status db vs already-loaded copy.
	* Engine.pm, Package.pm: disable dpkg status reloading during
	tight listing loops.

2006-07-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Don't be fooled by weird commands in line after #!

2006-07-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm: make sure /usr/bin/machine is an executable before 
	we call it

2006-07-19  Dave Morrison  <dmrrsn@users.sourceforge.net>
